--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^0.2.4"
   },
